# plots_pi

./: .travis.yml  CMakeLists.txt  Plots.fbp  README  SweepPlot.fbp  TrimPlot.fbp  VERSION.cmake  appveyor.yml  bld.bat
.circleci/: config.yml
OLD/: CMakeLists.txt.bak  README
OLD/cmake/: PluginNMEA.cmake
cmake/: PluginConfigure.cmake  PluginJSON.cmake
libs/nmea0183/src/: nmea0183.hpp
manual/: antora.yml  antora.yml.bak  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/sweep_plot/: antora.yml  site.yml
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_EM.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  (+22 more)
src/: AboutDialog.cpp  AboutDialog.h  History.cpp  History.h  Plot.cpp  Plot.h  PlotConfigurationDialog.cpp  PlotConfigurationDialog.h  PlotsDialog.cpp  PlotsDialog.h  PlotsUI.cpp  PlotsUI.h  PreferencesDialog.cpp  PreferencesDialog.h  SweepPlotDialog.cpp  SweepPlotDialog.h  SweepPlotUI.cpp  SweepPlotUI.h  TrimPlotDialog.cpp  TrimPlotDialog.h  TrimPlotUI.cpp  TrimPlotUI.h  icons.cpp  icons.h  ocpn_plugin.h  plots_pi.cpp  plots_pi.h  sweepplot_pi.cpp  sweepplot_pi.h  trimplot_pi.cpp  trimplot_pi.h
src/nmea0183/: nmea0183.hpp
